<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_enter_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/create_emp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusableInTouchMode="true"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_close"
                    android:hint="@string/emp_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_age_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusableInTouchMode="true"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emp_age"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_sal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:focusableInTouchMode="true"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/et_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_close"
                    android:hint="@string/emp_salary"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btn_save"
            android:background="@drawable/rounded_corners"/>
    </LinearLayout>


</LinearLayout>