<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_enter_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="@string/get_emp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txt_emp_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:focusableInTouchMode="true"
                    app:boxBackgroundColor="@color/colorPrimaryDark"
                    app:errorEnabled="true">

                    <EditText
                        android:id="@+id/et_emp_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_emp_id"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/rounded_corners"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_emp_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round_button_grey"
                android:orientation="vertical"
                android:padding="20dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/emp_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text=":"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_get_emp_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/emp_age"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text=":"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_get_emp_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:weightSum="10">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/emp_salary"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text=":"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_get_emp_salary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>